<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sjsu.jese.parkhere.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:background="@color/md_white_1000">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/input_layout_email"
            android:layout_marginTop="45dp"
            android:src="@drawable/parkhere_logo" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/input_layout_password"
            android:layout_below="@+id/input_layout_password"
            android:layout_marginTop="37dp"
            android:text="Sign In"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/md_white_1000"/>

        <TextView
            android:id="@+id/forgotPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignStart="@+id/input_layout_password"
            android:layout_below="@+id/signInBtn"
            android:layout_marginStart="64dp"
            android:layout_marginTop="37dp"
            android:text="Forgot password?"
            android:textColor="#252cf9" />

        <TextView
            android:id="@+id/createAccntTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signInBtn"
            android:layout_below="@+id/forgotPassTextView"
            android:layout_marginStart="48dp"
            android:layout_marginTop="13dp"
            android:text="Dont have an account?"
            android:textColor="#252cf9"/>

    </RelativeLayout>




</RelativeLayout>
