<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sjsu.jese.parkhere.newPost.NewPostGetAddressFragment"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/questionText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/input_layout_country"
            android:layout_marginTop="24dp"
            android:text="Where's your parking space located?"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_country"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionText"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/countryField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/input_layout_street"
                android:layout_alignEnd="@+id/input_layout_street"

                android:ems="10"
                android:hint="Country"
                android:inputType="textPersonName"
                android:text="e.g. United States" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_street"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_country"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/streetField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:ems="10"
                android:hint="Street"
                android:inputType="textPersonName"
                android:text="e.g. 978 Maple St." />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_street"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/cityField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="City"
                android:inputType="textPersonName"
                android:text="e.g. San Jose" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_state"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_city"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/stateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="State"
                android:inputType="textPersonName"
                android:text="e.g. FL" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_zip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_state"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/zipField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:ems="10"
                android:hint="Zip / Postal code"
                android:inputType="number"
                android:text="e.g. 95132" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/questionText"
            android:layout_below="@+id/input_layout_zip"
            android:layout_marginTop="21dp"
            android:text="Next" />
    </RelativeLayout>
</ScrollView>

