...
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionText"
        android:layout_marginTop="30dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- <EditText
            android:id="@+id/sizeField"
...
